# Spider-Man-Game-GDG

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  Spider-Man_Game_GDG_PRD.docx  THIRD_PARTY_NOTICES.md  build.ps1  capture_demo.bat  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.bat  setup.bat  setup.ps1  test.bat
.github/workflows/: validate.yml
artifacts/build_reports/: FINAL_BUILD_REPORT.md
config/: local.example.yaml  shared.yaml  vision.yaml
docs/: ARCHITECTURE.md  ASSET_REPLACEMENT.md  BUILDING.md  EVENT_SETUP.md  GAME_DESIGN.md  PLAN.md  TROUBLESHOOTING.md  VISION_PIPELINE.md  VISUAL_STYLE.md
game/: export_presets.cfg  project.godot
game/config/: game_defaults.json
game/scenes/: green_goblin_boss.tscn  main.tscn
game/shaders/: boss_distortion.gdshader  boss_distortion.gdshader.uid  comic_surface.gdshader  comic_surface.gdshader.uid  danger_pulse.gdshader.uid  halftone_overlay.gdshader.uid  impact_flash.gdshader.uid  rain.gdshader  rain.gdshader.uid  (+3 more)
tests/: test_asset_generation.py  test_config.py
tools/: generate_audio.py  generate_textures.py  inspect_logs.py  locate_godot.py  repeated_runtime_smoke.py  restart_smoke.py  tracking_loss_smoke.py  validate_build.py  validate_installation.py
vision/: __init__.py  camera_service.py  frame_buffer.py  hand_features.py  hand_service.py  health_server.py  landmark_filter.py  main.py  movement_classifier.py  pose_features.py  pose_service.py  protocol.py  simulator.py  web_gesture_classifier.py
web_protocol/: __init__.py  config.py  logging_setup.py
(+46 files in other folders)
